Links now in view for navigating polls, but thought needed on UX in this area.

--- a/app/views/poll.html
+++ b/app/views/poll.html
@@ -9,4 +9,11 @@
 			<button ng-click="vote($index)">Vote</button>
 		</li>
 	</ul>
+
+	<h1>Archive</h1>
+	<ul>
+		<li ng-repeat="poll in archive">
+			<a ng-href="/#/poll/{{poll._id}}">{{poll.question}}</a>
+		</li>
+	</ul>
 </div>
