Poll URL now appending dashed representation of question for accessibility. Still thinking about making polls reachable by typing dashed question in URL without ID, but may not be worth doing at the moment.

--- a/app/views/poll.html
+++ b/app/views/poll.html
@@ -13,7 +13,7 @@
 	<h1>Archive</h1>
 	<ul>
 		<li ng-repeat="poll in archive">
-			<a ng-href="/#/poll/{{poll._id}}">{{poll.question}}</a>
+			<a ng-href="/#/poll/{{poll._id}}/{{poll.question|dashString}}">{{poll.question}}</a>
 		</li>
 	</ul>
 </div>
