--- a/app/views/poll.html
+++ b/app/views/poll.html
@@ -6,7 +6,7 @@
 	<ul>
 		<li ng-repeat="choice in poll.choices">
 			{{choice.text}}  {{choice.votes}}
-			<button ng-click="vote($index)">Vote</button>
+			<button ng-click="vote($index)" ng-show="!voted">Vote</button>
 		</li>
 	</ul>
 
