Coloured bar with count text now shows after vote to provide simple visual of vote count.

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -25,3 +25,9 @@ ul {
     margin:0;
     padding:0;
 }
+
+.count-bar span {
+    display:inline-block;
+    background-color:#FFD76E;
+    margin-right:.5em;
+}
