--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,3 +1,7 @@
+* {
+    box-sizing: border-box;
+}
+
 body {
     background: #fafafa;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -5,7 +9,7 @@ body {
 }
 
 .hero-unit {
-    margin: 50px 25% 0 25%;
+    margin: 50px 10% 0 10%;
     font-size: 18px;
     font-weight: 200;
     line-height: 30px;
@@ -30,4 +34,11 @@ ul {
     display:inline-block;
     background-color:#FFD76E;
     margin-right:.5em;
+}
+
+input[type=text] {
+    width: 100%;
+    line-height:2em;
+    font-size: 1.5em;
+    padding: 0 .5em;
 }
