--- a/app/views/poll.html
+++ b/app/views/poll.html
@@ -1,5 +1,6 @@
 <div class="hero-unit">
-<a href="/#/polls">Back to latest poll</a>
+<a href="/#/polls">Back to latest poll</a><br>
+<a href="/#/polls/new">New poll</a>
 
 	<h1>Poll</h1>
 
