Changed 'time left' text to 'Poll closes:' plus relative date. Also added ng-show to show this only while poll is open.

--- a/app/views/poll.html
+++ b/app/views/poll.html
@@ -7,7 +7,7 @@
 	<div class="poll-view">
 		<div class="poll-header">
 			<h1>Poll: {{poll.question}}</h1>
-			<span class="poll-info">{{timeRemaining()}} left to vote</span>
+			<span class="poll-info" ng-show="!hasClosed()">Poll closes: {{timeRemaining()}}</span>
 		</div>
 
 		<div class="poll-choices place-vote">
